tests/mixed_flavors/mixed_flavors.exp
Error ----------------------------------------------------------------------------------------------------- test.js:2:18

Cannot cast `42` to `$NonMaybeType` because null [1] is incompatible with mixed [2]. [incompatible-cast]

   test.js:2:18
   2|   42 as number | null as $NonMaybeType<mixed>; // error null ~> MixedT (NonMaybe)
                       ^^^^ [1]

References:
   test.js:2:40
   2|   42 as number | null as $NonMaybeType<mixed>; // error null ~> MixedT (NonMaybe)
                                             ^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:4:18

Cannot cast `42` to `$NonMaybeType` because undefined [1] is incompatible with mixed [2]. [incompatible-cast]

   test.js:4:18
   4|   42 as number | void as $NonMaybeType<mixed>; // error undefined ~> MixedT (NonMaybe)
                       ^^^^ [1]

References:
   test.js:4:40
   4|   42 as number | void as $NonMaybeType<mixed>; // error undefined ~> MixedT (NonMaybe)
                                             ^^^^^ [2]



Found 2 errors
